force-app/main/default/objects/OrderItem/fields/DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Delivery Group and the Order Product must be related to the same order.</errorMessage>
        <filterItems>
            <field>$Source.OrderId</field>
            <operation>equals</operation>
            <valueField>DeliveryGroup__c.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DeliveryGroup__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>