force-app/main/default/objects/OrderItem/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeliveryType</valueSetName>
    </valueSet>
</CustomField>