force-app/main/default/objects/OrderItem/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <description>If the discount type is &quot;Percentage,&quot; this number represents the percentage that will be deducted from the total. If the discount type is &quot;Fixed,&quot; this number represents the exact dollar amount that will be deducted from the total.</description>
    <inlineHelpText>If the discount type is &quot;Percentage,&quot; this number represents the percentage that will be deducted from the total. If the discount type is &quot;Fixed,&quot; this number represents the exact dollar amount that will be deducted from the total.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>