force-app/main/default/objects/OrderItem/fields/LineDescriptionLink__c.field-meta.xml
<CustomField>
    <fullName>LineDescriptionLink__c</fullName>
    <formula>HYPERLINK(
	&quot;/lightning/r/OrderItem/&quot; &amp; Id &amp; &quot;/view&quot;,
	IF(
		ISBLANK(Description),
		&quot;View Order Item&quot;,
		Description
	)
)</formula>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>