force-app/main/default/objects/OrderItem/fields/ParentOrderProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentOrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>ChildOrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>