force-app/main/default/objects/OrderItem/fields/WorkOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderStatus__c</fullName>
    <label>Work Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>